SyntacticAnalyzer/tests/fail/lista_incompleta.java
class A {
	static void test(int a,) {
	// lista de argumentos formales incompletas
	}
}
